--- a/DEBIAN/control
+++ b/DEBIAN/control
@@ -4,7 +4,7 @@ Section: utils
 Priority: optional
 Architecture: all
 Depends: python3, python3-requests
-Maintainer: Kimathi Sedegah <youremail@example.com>
+Maintainer: Kimathi Sedegah <sedegahkim@gmail.com>
 Homepage: https://github.com/sedegah
 Description: Simple captive portal detection tool for the terminal.
  A CLI tool that checks for captive portals by sending HTTP requests
